--- a/src/components/Chats/Chat/Chat.css
+++ b/src/components/Chats/Chat/Chat.css
@@ -1,30 +1,49 @@
-.chat{
-    text-align:left;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    height: 70px;
-    border-bottom: 1px solid #ffffff;
+.chat {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  height: 70px;
+  border-radius: 25px;
+  border: 2px solid #dddddd;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-.a {
-    text-decoration: none;
-    color: inherit;
+a:link {
+  text-decoration: none;
+  color: inherit;
 }
 
-.chat_details{
-    flex: 1;
+a:visited {
+  text-decoration: none;
+  color: inherit;
 }
 
-.chat_details>p{
-    color:gray;
+a:hover {
+  text-decoration: none;
+  color: inherit;
 }
 
-.chat_timestamp{
-    color: lightgray;
+a:active {
+  text-decoration: none;
+  color: inherit;
 }
 
-.chat_image{
-    margin-right: 20px;
+.chat_details {
+  flex: 1;
+}
+
+.chat_details > p {
+  color: gray;
+}
+
+.chat_timestamp {
+  margin-left: auto;
+  text-decoration: none;
+  color: lightgray;
+}
+
+.chat_image {
+  margin-right: 20px;
 }
